# llg-sim

./: .gitignore  Cargo.toml  LICENSE  README.md
mumax/: bloch_dmi_minus.mx3  bloch_dmi_plus.mx3  demag2D.mx3  demag2Dpbc.mx3  demagSmall.mx3  demag_snapshot_x.mx3  demag_snapshot_y.mx3  demag_snapshot_z.mx3  macrospin_anisotropy.mx3  macrospin_fmr.mx3
mumax/st_problems/: sp2.mx3  sp4a.mx3  sp4b.mx3
scripts/: amr_viewer.py  bloch_dmi_analysis.py  compare_demag.py  compare_sk1.py  compare_sp2.py  compare_sp4.py  mag_viewer.py  mag_visualisation.py  overlay_macrospin.py  ovf_stats.py  ovf_utils.py  plot_antidot_benchmark.py  plot_appendix_figures.py  plot_dmi_transition.py  plot_vortex_gyration.py
src/: config.rs  energy.rs  geometry_mask.rs  grid.rs  grid_sp2.rs  initial_states.rs  lib.rs  llg.rs  minimize.rs  ovf.rs  params.rs  relax.rs  vec3.rs  vector_field.rs
src/amr/: clustering.rs  hierarchy.rs  indicator.rs  interp.rs  mod.rs  patch.rs  rect.rs  regrid.rs  stepper.rs
src/effective_field/: anisotropy.rs  coarse_fft_demag.rs  demag.rs  demag_fft_uniform.rs  demag_poisson_mg.rs  dmi.rs  exchange.rs  mg_composite.rs  mg_diagnostics.rs  mg_kernels.rs  mg_treecode.rs  mod.rs  zeeman.rs
tests/: subcycling_tests.rs  test_demag_methods.rs  validation.rs
