[package]
name = "llg-sim"
version = "0.1.0"
edition = "2024"

[features]
demag_timing = []

[dependencies]
image = "0.25"
plotters = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustfft = "6"
rayon = "1.11"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"